--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
-
 {% block title %}Flasky{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
+      {{ super() }}
+    <style>
+    </style>
     <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
     {% if not known %}
     <p>Pleased to meet you!</p>
@@ -12,5 +13,5 @@
     <p>Happy to see you again!</p>
     {% endif %}
 </div>
-{{ wtf.quick_form(form) }}
+{{ quick_form(form) }}
 {% endblock %}
